tests/fixtures/invalid/pow_str_set_float.py
# Cannot call pow() with Str, Set[int], Float
x = pow("hello", {1, 2, 3}, 1.0)
